# python-aliro-reader

./: .gitignore  .pre-commit-config.yaml  README.md  aliro.py  configuration.json  entity.py  main.py  pyproject.toml  repository.py
aliro/: __init__.py  auth1_command_parameters.py  authentication_policy.py  certificate.py  document.py  endpoint.py  flow.py  interface.py  protocol.py  reader_status.py  sercure_context.py  signaling_bitmask.py
tests/: test_certificate.py  test_der_tlv.py  test_document_serialization.py  test_protocol.py
util/: afclf.py  crypto.py  ecp.py  general.py  iso7816.py  structable.py
util/tlv/: __init__.py  ber.py  der.py  tlv.py
