[project]
name = "aliro-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cbor2>=5.8.0",
    "cryptography>=46.0.4",
    "nfcpy>=1.0.4",
    "pyusb>=1.3.1",
]



[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "target",
    ".eggs",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".coverage",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "C",    # mccabe complexity
    "I",    # import sorting
    "UP",   # pyupgrade
]
ignore = [
    "UP007",  # Use X | Y for type annotations (instead of Union[X, Y])
    "UP006",  # Use list instead of List for type annotations
    "UP035",  # Use tuple instead of Tuple for type annotations
]
